# pre-proto

./: .gitignore  BaseApplication.cpp  CMakeLists.txt  STYLE.cpp  TutorialApplication.cpp  TutorialApplication.h
src/: Application.cpp  Application.h  BaseApplication.h  CMakeLists.txt  Client.cpp  Client.h  Server.cpp  Server.h  TutorialApplication.cpp  TutorialApplication.h  common.h  main.cpp  precompiled_header.h
src/client/: CMakeLists.txt  main.cpp
src/client/clientgame/: ClientGame.cpp  ClientGame.h
src/client/clientgame/entity/: CMakeLists.txt  ogre.cpp  ogre.h
src/client/input/: CMakeLists.txt  InputManager.cpp  InputManager.h
src/client/util/: convert_ogre_vector.h
src/client/video/: CMakeLists.txt  DisplayManager.cpp  DisplayManager.h
src/clientgame/: CMakeLists.txt  ClientGame.cpp  ClientGame.h
src/config/: CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  ConfigManager.cpp  ConfigManager.h  ETF.txt  Tree.cpp  etf.cpp  etf.h
src/game/: CMakeLists.txt  ComponentNamed.cpp  ComponentNamed.h  ComponentPhysical.h  ComponentRenderable.cpp  ComponentRenderable.h  EntID.h  Game.cpp  Game.h  GameWorld.cpp  GameWorld.h  Renderable.cpp  Renderable.h  game.h
src/game/entities/: CMakeLists.txt  Entity.cpp  Entity.h  EntityRegistry.cpp  EntityRegistry.h  entities.h
src/gui/: CMakeLists.txt  GUIManager.cpp  GUIManager.h  gui.h
src/input/: CMakeLists.txt  InputManager.cpp  InputManager.h
src/logging/: CMakeLists.txt  ConsoleLogger.cpp  LogManager.cpp  LogManager.h  OgreLogAdapter.cpp  logging.h
src/pch/: boost_stuff.h
src/profiler/: CMakeLists.txt  Profiler.cpp  Profiler.h  ProfilerObj.h
src/server/: CMakeLists.txt  Server.h
src/servergame/: CMakeLists.txt
src/shared/: CMakeLists.txt  common.h
src/shared/config/: CMakeLists.txt  ConfigManager.cpp  Tree.cpp  config.h
src/shared/hmath/: linear_algebra.h
src/shared/logging/: ConsoleLogger.h  LogManager.cpp  OgreLogAdapter.h  logging.h
src/shared/profiler/: CMakeLists.txt  Profile.cpp  Profile.h  profiler.h
src/shared/sim/: CMakeLists.txt  CopyableScene.cpp  Sim.cpp  Sim.h
src/shared/sim/entity/: CMakeLists.txt  base.h  entity.h  physics.cpp  physics.h  render.cpp  render.h
src/shared/util/: hex.cpp  hex.h  linear_algebra.h  singleton.h  timer.cpp  util.h
src/sim/: CMakeLists.txt  CopyableScene.h  Sim.cpp  Sim.h
src/sim/entity/: CMakeLists.txt  base.cpp  base.h  entity.h  physics.cpp  position.cpp  position.h
src/util/: CMakeLists.txt  Clock.cpp  Clock.h  fsutil.cpp  fsutil.h  hex.cpp  singleton.h  timer.cpp  timer.h
src/video/: CMakeLists.txt  DisplayManager.cpp  DisplayManager.h
